--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
+  "homepage": "https://clouthacker.github.io/Nike-Site-with-React-and-TailwindCss/",
   "name": "tailwindtutorial",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^6.2.0",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
